--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     delicious beverages and products.">
     <title>Trung Thu cho em 2025</title>
     <script src="https://kit.fontawesome.com/990476d75f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="htt ps://site-assets.fontawesome.com/releases/v6.4.2/css/all.css">
 </head>
 <body>
