--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     delicious beverages and products.">
     <title>Trung Thu cho em 2025</title>
     <script src="https://kit.fontawesome.com/990476d75f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="htt ps://site-assets.fontawesome.com/releases/v6.4.2/css/all.css">
 </head>
 <body>
@@ -125,7 +125,7 @@
             </div>
 
             <div class="box"> 
-                <img src="images/vitdoinon.jfif" alt="">
+                <img src="images/vitdoinon.jpg" alt="">
                 <h3>móc treo vịt trắng việt nam</h3>
                 <div class="price">75.000 VNĐ <span></span></div>
                 <a href="#" class="btn">Đặt hàng</a>
